Give each mode a view that names it and shows its settings
Delivers PRD R14 and completes v1's feature scope. Every mode is now
configurable and every mode says, on screen, what it is configured to do
and that it does not do it yet.

view1..view4 become log-view, message-view, soap-view and rest-view, with
matching controllers, and ViewRegistry no longer maps LOG to view1. That
mapping was the one wart the mode commit knowingly left; keying the
registry by the enum first is what let this be a rename rather than a
rewiring. ModeViewTest asserts each mode's view actually carries that
mode's title -- a mis-wiring no compiler catches.

What the views show
  Log its folder, playback speed and mapping count; Message its type;
  SOAP its port. Read-only on purpose: every value is already editable in
  the ribbon or in Preferences, and a third editing surface would be a
  third thing to keep in step.

  Bound rather than assigned, so a setting changed anywhere appears here
  without the view being rebuilt. That also makes these views the
  cheapest end-to-end evidence that the settings plumbing works, since
  the ribbon, the dialog and the view are three independent readers of
  one AppState.

  They are placeholders that say so. No mode has behaviour -- v1's stated
  boundary -- and each view states that rather than leaving the reader to
  infer it from an empty pane.

REST says something different, deliberately
  The other three are configured but unimplemented. REST is not designed
  at all, so it has no settings anywhere and its note says that instead
  of implying something is merely switched off. Its toggle ships enabled
  for the same reason the view exists: a dead button with no explanation
  leaves the user guessing whether the app is broken.

A theming defect went with them
  Each view carried style="-fx-font-size: 22px;" inline -- a literal the
  theme tokens could never reach, so the heading kept its light-theme
  text colour when everything around it went dark.